--- a/loadCells/index.html
+++ b/loadCells/index.html
@@ -14,5 +14,8 @@
 </head>
 
 <body>
+  <img class="fit-picture"
+     src="/export2/Stack0200.png"
+     alt="Grapefruit slice atop a pile of other slices">
 </body>
 </html>
