--- a/loadCells/index.html
+++ b/loadCells/index.html
@@ -5,7 +5,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="loadCells.js"></script>
+  <script language="javascript" type="text/javascript" src="p5js-temp-loadCells8520487882180662.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
@@ -14,8 +14,5 @@
 </head>
 
 <body>
-  <img class="fit-picture"
-     src="/export2/Stack0200.png"
-     alt="Grapefruit slice atop a pile of other slices">
 </body>
 </html>
