--- a/loadCells/index.html
+++ b/loadCells/index.html
@@ -16,6 +16,6 @@
 <body>
   <img class="fit-picture"
      src="/export2/Stack0200.png"
-     alt="Grapefruit slice atop a pile of other slices">
+     alt="Cellule à classer">
 </body>
 </html>
